# SelectOne

./: .gitignore  CMakeLists.txt  README.md  list.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
